# TrojanHorseWindowsAdmin

./: .gitignore  CMakeLists.txt  README.md  run_proto_compiler.bat
src/AdminCheck/: AdminCheck.cpp  AdminCheck.hpp  CMakeLists.txt
src/AdminStartupItem/: AdminStartupItem.cpp  AdminStartupItem.hpp  CMakeLists.txt
src/AdminTaskSchedule/: AdminTaskSchedule.cpp  AdminTaskSchedule.hpp  CMakeLists.txt
src/BackdoorExecution/: BackdoorExecution.cpp  BackdoorExecution.hpp  CMakeLists.txt
src/Client/: CMakeLists.txt  main.cpp
src/CombaseLibrary/: CMakeLists.txt  CombaseLibrary.cpp  CombaseLibrary.hpp
src/ErrorMessageMacro/: error_message_macro.hpp
src/ExecutableRun/: CMakeLists.txt  ExecutableRun.cpp  ExecutableRun.hpp
src/HiddenFileCreate/: CMakeLists.txt  HiddenFileCreate.cpp  HiddenFileCreate.hpp
src/Main/: CMakeLists.txt  main.cpp
src/PathToCurrentExecutable/: CMakeLists.txt  PathToCurrentExecutable.cpp  PathToCurrentExecutable.hpp
src/ProtoMessages/: CMakeLists.txt  CommandHash.cpp  CommandHash.hpp  messages.pb.cc  messages.pb.h  messages.proto
src/Server/: CMakeLists.txt  main.cpp  resource.rc
src/SharedConstants/: CMakeLists.txt  PublicPrivateKeyTypes.hpp  SharedConstants.cpp  SharedConstants.hpp
src/UdpServer/: CMakeLists.txt  UdpServer.cpp  UdpServer.hpp
src/Win32ErrorMessage/: CMakeLists.txt  Win32ErrorMessage.cpp  Win32ErrorMessage.hpp
