add_executable(hello_world_exe main.cpp)
target_link_libraries(hello_world_exe PUBLIC AdminCheck)

if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
    if (CMAKE_CXX_COMPILER_ID MATCHES GNU)
        # target_link_options(hello_world_exe PRIVATE -Wl,--subsystem,windows)
        # target_link_options(hello_world_exe PRIVATE -Wl,--subsystem,console)
    elseif (CMAKE_CXX_COMPILER_ID MATCHES MSVC)
        # set_target_properties(hello_world_exe PROPERTIES LINK_FLAGS /SUBSYSTEM:WINDOWS)
        # set_target_properties(hello_world_exe PROPERTIES LINK_FLAGS /SUBSYSTEM:CONSOLE)
    endif()
elseif (CMAKE_SYSTEM_NAME STREQUAL "Linux")
else()
    message(FATAL_ERROR "Not Windows or Linux")
endif()
